# taskinmed-api

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  Dockerfile  alembic.ini  auth.py  changes.txt  db.py  dbsync.py  docker-compose.yml  gii.py  gunicorn.py  klinika(1).sql  main.py  main.tf  manager.py  pyproject.toml  routes.py  settings.py  trlatin.py  utils.py  wsroutes.py
controllers/: user.py
functions/: casher.py  cashreg.py  diagnosis.py  doctor.py  drug.py  expence.py  illness.py  illness_comment.py  income.py  patient.py  queue.py  recall.py  recipe.py  region.py  report.py  request.py  service.py  source.py  state.py  user.py
models/: casher.py  cashreg.py  deleteds.py  diagnosis.py  doctor.py  drug.py  expence.py  illness.py  illness_comment.py  income.py  partner.py  partner_employee.py  patient.py  queue.py  recall.py  recipe.py  recipe_template.py  region.py  request.py  service.py  setting.py  source.py  state.py  user.py
routers/: casher.py  cashreg.py  diagnosis.py  doctor.py  drug.py  expence.py  illness.py  illness_comment.py  income.py  partner.py  patient.py  queue.py  recall.py  recipe.py  recipe_template.py  region.py  report.py  service.py  source.py  state.py  user.py
schemas/: casher.py  cashreg.py  diagnosis.py  doctor.py  drug.py  expence.py  illness.py  illness_comment.py  income.py  patient.py  queue.py  recall.py  recipe.py  region.py  service.py  source.py  state.py  user.py
sounds/: Ovoz 001.m4a  Ovoz 002.m4a  Ovoz 004.m4a  Ovoz 005.m4a  Ovoz 006.m4a  Ovoz 007.m4a  Ovoz 008.m4a  Ovoz 010.m4a  Ovoz 011.m4a  Ovoz 012.m4a  Ovoz 013.m4a  Ovoz 014.m4a  Ovoz 029.m4a  Ovoz 030.m4a  Ovoz 031.m4a  Ovoz 032.m4a  Ovoz 033.m4a  Ovoz 034.m4a  Ovoz 035.m4a  Ovoz 036.m4a  (+54 more)
(+91 files in other folders)
